# anduin

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
flink-jobs/: Dockerfile
flink-jobs/jobs/: 01_hot_sky_cells.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/docker-entrypoint.d/: 10-envsubst.sh
frontend/src/: main.tsx  theme.ts
frontend/src/api/: client.ts  passes.ts  satellites.ts  types.ts  zones.ts
frontend/src/components/: Globe.tsx  SatelliteList.tsx  StatusBar.tsx
frontend/src/components/layers/: hotCellsLayer.ts  satellitePointsLayer.ts  trailDotsLayer.ts
frontend/src/hooks/: useObserverLocation.ts
frontend/src/pages/: DashboardPage.tsx  PassesPage.tsx
frontend/src/ws/: store.ts  useLiveStream.ts
ingest-api/: Dockerfile  pyproject.toml
ingest-api/app/: auth.py  avro_codec.py  config.py  main.py  metrics.py  producers.py  ratelimit.py  schemas.py
ingest-api/tests/: test_avro_codec.py
pass-worker/: Dockerfile  pyproject.toml
pass-worker/app/: codec.py  geometry.py  main.py  observers.py  passes.py  publisher.py
pass-worker/tests/: test_stubs.py
position-persister/: Dockerfile  pyproject.toml
position-persister/app/: codec.py  main.py
postgres/init/: 01-extensions.sql  02-schema.sql  03-seed.sql
query-api/: Dockerfile  pyproject.toml
query-api/app/: auth.py  config.py  deps.py  hot_cells.py  main.py  ratelimit.py  routes_passes.py  routes_zones.py  ws.py
schemas/: register.sh
schemas/common/: envelope.avsc  geo_point.avsc
schemas/dlq/: dlq_record.avsc
schemas/satellite/: satellite_anomaly_detected.avsc  satellite_pass_predicted.avsc  satellite_position_sampled.avsc  tle_record.avsc
scripts/: init-topics.sh
tle-producer/: Dockerfile  pyproject.toml
tle-producer/app/: config.py  healpix.py  main.py  propagate.py  publisher.py
tle-producer/app/sources/: __init__.py  celestrak.py  fixture.py  n2yo.py  replay.py  spacetrack.py
tle-producer/fixtures/: seed.txt
tle-producer/tests/: test_stubs.py
