[project]
name = "ingest-api"
version = "0.1.0"
description = "Anduin ingest API — validate + Avro-encode + produce to Kafka."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "confluent-kafka>=2.6",
  "fastavro>=1.9",
  "redis>=5.0",
  "structlog>=24.4",
  "prometheus-fastapi-instrumentator>=7.0",
  "asyncpg>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "S", "RUF"]
ignore = ["S101"]  # allow assert in tests
