[project]
name = "pass-worker"
version = "0.1.0"
description = "Consume satellite positions, compute look-angles per observer, emit pass events."
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.12",
  "cramjam>=2.8",
  "fastavro>=1.9",
  "httpx>=0.27",
  "redis>=5.0",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "confluent-kafka>=2.6",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
