[project]
name = "query-api"
version = "0.1.0"
description = "Anduin read API — REST over Redis hot state + Postgres cold store."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "asyncpg>=0.30",
  "redis>=5.0",
  "prometheus-fastapi-instrumentator>=7.0",
  "structlog>=24.4",
  "aiokafka>=0.12",
  "cramjam>=2.8",
  "fastavro>=1.9",
  "httpx>=0.27",
  "websockets>=14",
  "healpy>=1.17",
  "numpy>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
