[project]
name = "tle-producer"
version = "0.1.0"
description = "Anduin TLE producer — fetch TLEs, propagate positions, POST to ingest-api."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "sgp4>=2.23",
  "skyfield>=1.49",
  "astropy-healpix>=1.0",
  "astropy>=6.1",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
